--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable='no'">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="theme-color" content="#000000" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <script src="./antm-viewport.min.js"></script>
+  <!-- <script src="./antm-viewport.min.js"></script> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
