--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable='no'">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
   <meta name="theme-color" content="#000000" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
 
@@ -23,8 +23,6 @@
   if(!window.Promise) {
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
   }
-
-        
 </script>
 
 </html>
