--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
   <meta name="theme-color" content="#000000" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
-
+  <script src="./icon.js"></script>
+  <style>
+    .icon {
+      width: 1em; height: 1em;
+      vertical-align: -0.15em;
+      fill: currentColor;
+      overflow: hidden;
+    }
+  </style>
   <title>团队成功</title>
 </head>
 
