--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <script>
   if ('addEventListener' in document) {
     document.addEventListener('DOMContentLoaded', function() {
-      FastClick.attach(document.body);
+      FastClick.attach(document.body,{});
     }, false);
   }
   if(!window.Promise) {
